# Email-Manager

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  serverless.yml
config/: categorization_guidelines.md
scripts/: build_priority_senders.py  setup_oauth.py  test_local.py  upload_tokens_to_ssm.py
src/: config.py  handler.py  logging_config.py  models.py  pipeline.py
src/ai/: categorizer.py  prompts.py
src/gmail/: client.py  proxy_client.py  thread_grouper.py  token_manager.py
src/notifications/: slack.py
src/report/: generator.py  slack_formatter.py
src/utils/: batch_processor.py  errors.py  rate_limiter.py
